istio/amazin/v1-routing-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory
spec:
  hosts:
  - inventory.prd
  http:
  - route:
    - destination:
        host: inventory.prd
        subset: v1
      weight: 100
    - destination:
        host: inventory.prd
        subset: v2
      weight: 0
    - destination:
        host: inventory.prd
        subset: v3
      weight: 0
